docs: audit Java 27 features (final vs preview) and set preview policy
Verified every feature on JDK 27+35. Structured Concurrency (JEP 533)
is still preview: allowed only in m10 behind --enable-preview. Lazy
Constants and primitive patterns stay out of graded code.

Closes #2

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>